# payment-engine

./: Cargo.toml  README.md  transactions.csv  watch-tests.sh  watch.sh
src/: main.rs  model.rs  tests.rs
test-data/: bad-chargeback.csv  bad-record-ignored.csv  bad-resolve.csv  dispute-after-resolution.csv  dispute-while-dispute-in-progress.csv  double-transactions.csv  double-withdraw.csv  good-chargeback-with-more-transactions.csv  good-chargeback.csv  good-resolve.csv  simple-deposit-and-withdrawal.csv  simple-dispute.csv  single-deposit.csv  single-withdrawal.csv  test-total.csv
