[package]
name = "payment-engine"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
rust_decimal = { version = "1.25" }
log = "0.4.17"
env_logger = "0.9.0"
